--- a/index.html
+++ b/index.html
@@ -142,21 +142,8 @@
     </footer>
 
 
-    <script>
-      const Modal = {
-            open(){
-                //Abrir modal
-                //Adicionar a class active ao model
-                document.querySelector('.modal-overlay')
-                .classList.add('active')
-            },
-            close(){
-                // fechar o modal
-                //remover a class active do model
-                document.querySelector('.modal-overlay')
-                .classList.remove('active')
-            }
-        }
+    <script src="./scripts.js">
+      
     </script>    
 </body>
 
