--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                    <samp>Entradas</samp> 
                    <img src="./assets/income.svg"  alt="Imagem de entradas">
                 </h3>
-                <p>R$5.000,00</p>
+                <p id="incomeDisplay">R$5.000,00</p>
             </div>
 
             <div class="card">
@@ -33,14 +33,14 @@
                     <samp>Saidas</samp> 
                    <img src="./assets/expense.svg"  alt="Imagem de saidas">
                 </h3>
-                <p>R$2.000,00</p>
+                <p id="expenseDisplay">R$2.000,00</p>
             </div>
             <div class="card total">
                 <h3>
                     <samp>Total</samp> 
                    <img src="./assets/total.svg"  alt="Imagem de Total">
                 </h3>
-                <p>R$3.000,00</p>
+                <p  id="totalDisplay">R$3.000,00</p>
             </div>
         </section>
 
@@ -67,7 +67,7 @@
         <div class="modal">
             <div class="form">
                 <h2>Nova Transação</h2>
-                <form action="">
+                <form action="" onsubmit="Form.submit(event)">
                     <div class="input-group">
                         <label 
                         class="sr-only" 
